--- a/seasonality analysis/Durham_analysis.Rmd
+++ b/seasonality analysis/Durham_analysis.Rmd
@@ -44,8 +44,22 @@ for(cat in race_eth_categories){
 }
 ```
 
+```{r loading in Jun to Oct 2020 data }
+unzip("../Race-and-Ethnicity-Data-1.1/Health_equity_data.csv.zip", list=T)
+raw_oct_june_data <- read_csv(unzip("../Race-and-Ethnicity-Data-1.1/Health_equity_data.csv.zip", "Health_equity_data.csv"))
+```
 ```{r}
-unzip("../Health_equity_data.zip", list=T)
-all_raw_data <- read_csv(unzip("../Health_equity_data.zip", "Health_equity_data.csv"), col_names = F)
+colnames(raw_oct_june_data) <- c("county", "date", "group", "cases")
+durham_jun_oct_long <- raw_oct_june_data[ which(raw_oct_june_data$county=="Durham County, North Carolina"), ]
+```
+
+```{r}
+durham_jun_oct_long <- durham_jun_oct_long %>%
+  filter(group != "2+_races" & group != "native_hawaiian_pacific_islander") %>%
+  select(-c(county))
+durham_jun_oct_long$cases <- as.numeric(durham_jun_oct_long$cases)
+race_eth_categories <- unique(durham_jun_oct_long$group)
+date <- unique(durham_jun_oct_long$date)
+durham_jun_oct_short <- data.frame(date)
 ```
 
